...
    
    //MARK: - Helpers
    private func setupNavigationBar() {
        let editButton = UIBarButtonItem(barButtonSystemItem: .edit, target: self, action: nil)
        let addButton = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: nil)
        
        navigationItem.title = "Johnny's Trips"
        navigationItem.setLeftBarButton(editButton, animated: true)
        navigationItem.setRightBarButton(addButton, animated: true)
        
        navigationController?.navigationBar.tintColor = .black
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationController?.navigationBar.backgroundColor = UIColor(named: "Blue-2")
...
    
    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        guard let cell = tableView.dequeueReusableCell(withIdentifier: HomeTableViewCell.cellIdentifier, for: indexPath) as? HomeTableViewCell else {
            return UITableViewCell()
        }
        
        cell.thumbDisplay.labelDisplay.text = "Belo Horizonte"
        
        return cell
    }
    
    func numberOfSections(in tableView: UITableView) -> Int {
        return 3
...
